
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct utsname {char* release; } ;


 int exit (int) ;
 int perror (char*) ;
 int printf (char*,...) ;
 int strlen (char*) ;
 scalar_t__ uname (struct utsname*) ;

int dump_uts(void)
{
 int i, leaked = 0;
 struct utsname buf = { };

 if (uname(&buf)) {
  perror("uname");
  exit(1);
 }
 printf("%s\n", buf.release);

 for (i = strlen(buf.release) + 1; i < sizeof(buf.release); i++) {
  unsigned char c = (unsigned char)buf.release[i];

  printf("%02x", c);
  if (c)
   leaked = 1;
 }
 printf("\n");

 return leaked ? (i - (strlen(buf.release) + 1)) : 0;
}
